// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDeploy > snapshot: custom command, ja 1`] = `
"# https://rs256.net/actions/ で生成。自由に編集してよい。
# push でビルドし、任意のデプロイコマンドに渡す。
# https://docs.github.com/actions/reference/workflows-and-actions/workflow-syntax
name: Deploy
on:
  push:
    branches: [main]
  workflow_dispatch:
permissions:
  contents: read
concurrency:
  group: "deploy-\${{ github.ref }}"
  cancel-in-progress: true
jobs:
  deploy:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v7
      # pnpm/action-setup はバージョンを package.json の packageManager フィールドから読む。
      - name: Setup pnpm
        uses: pnpm/action-setup@v4
      - name: Setup Node
        uses: actions/setup-node@v7
        with:
          node-version: 22
          cache: pnpm
      - name: Install dependencies
        run: pnpm install --frozen-lockfile
      - name: Build
        run: pnpm build
      # Settings > Secrets and variables > Actions に登録しておく。
      - name: Deploy
        run: rsync -az dist/ deploy@example.com:/srv/www/
        env:
          SSH_KEY: "\${{ secrets.SSH_KEY }}"
"
`;

exports[`generateDeploy > snapshot: github pages, en 1`] = `
"# Generated by https://rs256.net/actions/ - edit freely.
# Builds on push and publishes the result with GitHub Pages.
# https://docs.github.com/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site
name: Deploy to GitHub Pages
on:
  push:
    branches: [main]
  workflow_dispatch:
# pages:write publishes the artifact and id-token:write lets deploy-pages authenticate through OIDC.
permissions:
  contents: read
  pages: write
  id-token: write
concurrency:
  group: pages
  cancel-in-progress: false
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v7
      - name: Setup Node
        uses: actions/setup-node@v7
        with:
          node-version: 22
          cache: npm
      - name: Install dependencies
        run: npm ci
      - name: Build
        run: npm run build
      - name: Upload artifact
        uses: actions/upload-pages-artifact@v5
        with:
          path: dist
  # Requires Settings > Pages > Source to be set to "GitHub Actions".
  deploy:
    needs: build
    environment:
      name: github-pages
      url: "\${{ steps.deployment.outputs.page_url }}"
    runs-on: ubuntu-latest
    steps:
      - name: Deploy to GitHub Pages
        id: deployment
        uses: actions/deploy-pages@v5
"
`;

exports[`generateDeploy > snapshot: github pages, ja 1`] = `
"# https://rs256.net/actions/ で生成。自由に編集してよい。
# push でビルドし、GitHub Pages で公開する。
# https://docs.github.com/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site
name: Deploy to GitHub Pages
on:
  push:
    branches: [main]
  workflow_dispatch:
# pages:write で成果物を公開し、id-token:write で deploy-pages が OIDC 認証する。
permissions:
  contents: read
  pages: write
  id-token: write
concurrency:
  group: pages
  cancel-in-progress: false
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v7
      - name: Setup Node
        uses: actions/setup-node@v7
        with:
          node-version: 22
          cache: npm
      - name: Install dependencies
        run: npm ci
      - name: Build
        run: npm run build
      - name: Upload artifact
        uses: actions/upload-pages-artifact@v5
        with:
          path: dist
  # Settings > Pages > Source を "GitHub Actions" にしておく必要がある。
  deploy:
    needs: build
    environment:
      name: github-pages
      url: "\${{ steps.deployment.outputs.page_url }}"
    runs-on: ubuntu-latest
    steps:
      - name: Deploy to GitHub Pages
        id: deployment
        uses: actions/deploy-pages@v5
"
`;
